syntax = "proto3";
option go_package = "./pb;pb";

message heart_tos {
}

message heart_toc {
}

message pb_server {
  int64 id = 1;
  string address = 2;
  uint32 port = 3;
}

message create_server_tos {
  uint32 port = 1;
}

message create_server_toc {
  bool success = 1;
}

message get_all_servers_tos {
}

message get_all_servers_toc {
  repeated pb_server list = 1;
}

message udp_tos {
  int64 to_id = 1;
  bytes data = 2;
}

message udp_toc {
  int64 from_id = 1;
  bytes data = 2;
}
